--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,24 @@
   transform: translate(-50%, -50%);
 }
 
+.full-screen-text {
+  position: relative;
+}
+
+.full-screen p {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 10vmin;
+  background: rgba(250, 250, 250, 0);
+  color: #f1f1f1;
+  text-transform: uppercase;
+  font-family: Helvetica;
+}
+
+/*
 .full-screen p {
   position: absolute;
   width: 100%;
@@ -42,6 +60,7 @@
   text-transform: uppercase;
   font-family: Helvetica;
 }
+*/
 
 .nav {
   position: fixed;
