--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   height: 100%;
   overflow: hidden;
   object-fit: fill;
+  display: flex;
+  align-items: center;
+  justify-content: center
 }
 
 .full-screen video {
@@ -30,37 +33,22 @@
   transform: translate(-50%, -50%);
 }
 
-.full-screen-text {
-  position: relative;
-}
-
 .full-screen p {
   position: absolute;
+  display: block;
+  margin: 0;
   width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 10vmin;
-  background: rgba(250, 250, 250, 0);
-  color: #f1f1f1;
+  text-align: center;
+  background: rgba(255, 255, 255, 0);
+  color: rgb(255, 255, 255);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(0, 0, 0);
   text-transform: uppercase;
-  font-family: Helvetica;
+  font-family: 'Space Mono', monospace;
+  font-style: normal;
+  font-weight: 250;
+  font-size: 25vmin;
 }
-
-/*
-.full-screen p {
-  position: absolute;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: rgba(250, 250, 250, 0);
-  color: #f1f1f1;
-  font-size: 10vmin;
-  text-transform: uppercase;
-  font-family: Helvetica;
-}
-*/
 
 .nav {
   position: fixed;
