--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+.full-div {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: fill;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
 .full-screen {
   position: absolute;
   top: 0;
@@ -39,7 +52,7 @@
   margin: 0;
   width: 100%;
   text-align: center;
-  background: rgba(255, 255, 255, 0);
+  background: rgba(61, 53, 71, 0);
   color: rgb(255, 255, 255);
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: rgb(0, 0, 0);
