--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,27 @@
   transform: translate(-50%, -50%);
 }
 
+.full-screen-batik {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.full-screen-batik video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .full-screen iframe {
   min-width: 100%;
   min-height: 100%;
