--- a/src/App.css
+++ b/src/App.css
@@ -86,41 +86,57 @@
 
 .nav {
   position: fixed;
-  right: 25px;
-  bottom: 25px;
 }
 
-.br {
-  right: 25px;
-  bottom: 25px;
-}
-
-.tr {
+.batik {
   right: 25px;
   top: 25px;
 }
 
-.bl {
-  left: 25px;
-  bottom: 25px;
+.nav.batik button {
+  display: block;
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/batik_label.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 200px;
+  font-size: 0;
+  outline: 0;
+  border: none;
 }
 
-.tl {
-  left: 25px;
-  top: 25px;
+.bird {
+  right: 25px;
+  top: 120px;
 }
 
-.nav button {
+.nav.bird button {
+  display: block;
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/bird_label.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 200px;
+  font-size: 0;
+  outline: 0;
+  border: none;
+}
+
+.nav.aoe button {
   display: block;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background: rgba(8, 236, 149, 0.322);
-  background-image: url('./icons/snowman-solid.svg');
+  background-image: url('./assets/snowman-solid.svg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 32px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  background-size: 200px;
   font-size: 0;
   outline: 0;
+  border: none;
 }
