--- a/src/App.css
+++ b/src/App.css
@@ -88,12 +88,34 @@
   position: fixed;
 }
 
-.batik {
+/*TEMP TEMP*/
+.finalBanner {
+  top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav.finalBanner button {
+  display: block;
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/tmp_final_review_banner.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 200px;
+  font-size: 0;
+  outline: 0;
+  border: none;
+}
+
+/* Batik */
+.batik1 {
   right: 25px;
   top: 25px;
 }
 
-.nav.batik button {
+.nav.batik1 button {
   display: block;
   width: 250px;
   height: 100px;
@@ -107,9 +129,29 @@
   border: none;
 }
 
-.bird {
+.batik2 {
   right: 25px;
   top: 120px;
+}
+
+.nav.batik2 button {
+  display: block;
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/batik2_label.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 80px;
+  font-size: 0;
+  outline: 0;
+  border: none;
+}
+/* End Batik */
+
+.bird {
+  right: 25px;
+  top: 215px;
 }
 
 .nav.bird button {
@@ -126,16 +168,20 @@
   border: none;
 }
 
+.aoe {
+  right: 25px;
+  top: 310px;
+}
+
 .nav.aoe button {
   display: block;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background: rgba(8, 236, 149, 0.322);
-  background-image: url('./assets/snowman-solid.svg');
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/alone_on_earth.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 200px;
+  background-size: 160px;
   font-size: 0;
   outline: 0;
   border: none;
