feat: vid poem component; add question-why-am-i-here

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@
   font-family: 'Space Mono', monospace;
   font-style: normal;
   font-weight: 250;
-  font-size: 25vmin;
+  font-size: 20vmin;
 }
 
 .nav {
@@ -174,6 +174,44 @@
 }
 
 .nav.aoe button {
+  display: block;
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/alone_on_earth.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 160px;
+  font-size: 0;
+  outline: 0;
+  border: none;
+}
+
+.question {
+  right: 25px;
+  top: 405px;
+}
+
+.nav.question button {
+  display: block;
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/alone_on_earth.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 160px;
+  font-size: 0;
+  outline: 0;
+  border: none;
+}
+
+.not-afraid {
+  right: 25px;
+  top: 500px;
+}
+
+.nav.not-afraid button {
   display: block;
   width: 250px;
   height: 100px;
