refactor: new on-earth work

--- a/src/App.css
+++ b/src/App.css
@@ -206,12 +206,12 @@
   border: none;
 }
 
-.not-afraid {
+.on-earth {
   right: 25px;
   top: 500px;
 }
 
-.nav.not-afraid button {
+.nav.on-earth button {
   display: block;
   width: 250px;
   height: 100px;
