--- a/src/App.css
+++ b/src/App.css
@@ -224,3 +224,22 @@
   outline: 0;
   border: none;
 }
+
+.water-and-light {
+  right: 25px;
+  top: 500px;
+}
+
+.nav.water-and-light button {
+  display: block;
+  width: 250px;
+  height: 100px;
+  background: rgba(252, 253, 253, 0);
+  background-image: url('./assets/alone_on_earth.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 160px;
+  font-size: 0;
+  outline: 0;
+  border: none;
+}
